--- a/camera.service
+++ b/camera.service
@@ -1,12 +1,14 @@
 [Unit]
-Description=Camera Service
-After=network.target
+Description=Camow7 Python Camera Script
+After=network.target camow7_ffmpeg.service
 
 [Service]
-User=root
-WorkingDirectory=/root/rpi-homekit-cam
-ExecStart=/usr/bin/python3 /root/rpi-homekit-cam/main.py
+Type=simple
+WorkingDirectory=/home/camow7/rpi-homekit-cam/main.py-cam/
+ExecStart=/usr/bin/python3 /home/camow7/rpi-homekit-cam/main.py-cam/main.py
+User=camow7
 Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
